update get all histories by ticket API
